<resources>
    <string name="app_name">ShutdownSystem</string>
    <string name="title_activity_login_aty">Sign in</string>
    <string name="net_load">Log In...</string>
    <string name="net_load_data">Loading data...</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>

    <string-array name="main">
        <item>Vehicle Entry</item>
        <item>Out of the vehicle</item>
        <item>The temporary card</item>
        <item>Entry of Vehicle Information</item>
        <item>PRINT</item>
        <item>Query Log</item>
        <item>System Settings</item>
    </string-array>

    <string name="last_name">Last Name</string>
    <string name="first_name"> Name</string>
    <string name="L_P_N">License Plate Number</string>
    <string name="T_N">Telephone Number</string>
    <string name="next_step">Next Step</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>


    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="ds">Data Sync</string>
    <string name="mu">Manual Upload</string>
    <string name="cd">Cache Data</string>
    <string name="hint">HINT</string>
    <string name="pfs">Parking Fee Settings</string>
    <string name="day">Day</string>
    <string name="day_intro">Set up the cost of parking every day</string>
    <string name="hour">Hour</string>
    <string name="hour_intro">Set the cost of parking per hour</string>
    <string name="month">Month</string>
    <string name="other">Other</string>
    <string name="month_intro">Set a monthly parking fee</string>
    <string name="card_pat_str">PAT CARD PLS</string>
    <string name="card_id">CARD ID</string>
    <string name="recharge">RECHARGE</string>
    <string name="purchase_time">PURCHASE TIME</string>

    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="export_str">Export to PDF format</string>
    <string name="conn_print">CONNECT THE PRINTER</string>
    <string name="read">READ</string>
    <string name="repeat_on">REPEAT ON</string>
    <string name="repeat_off">REPEAT OFF</string>
    <string name="no_park_data">No parking information data</string>
    <string name="exit_success">Success Fee</string>
    <string name="r">RECHARGE/PURCHASE</string>
    <string name="p">ENTRY/EXIT</string>
    <string name="has_no_data">No content, refresh it ~</string>
    <string name="pull_to_refresh">pull to refresh</string>
    <string name="release_to_refresh">release to refresh</string>
    <string name="refreshing">refreshing…</string>
    <string name="refresh_succeeded">refresh succeeded</string>
    <string name="refresh_failed">refresh failed</string>
    <string name="pull_up_to_load">pull up to load</string>
    <string name="release_to_load">release to load</string>
    <string name="loading">loading…</string>
    <string name="load_succeeded">load succeeded</string>
    <string name="load_failed">load failed</string>
    <string name="customize_resources">cus resources</string>
    <string name="t_name">NAME:</string>
    <string name="t_card">CARD NUMBER:</string>
    <string name="t_recharge_amount">RECHARGE AMOUNT</string>
    <string name="t_time">TIME:</string>
    <string name="no_data">No more data</string>
    <string name="el">Enter the license plate</string>
    <string name="input_license">OUTPUT LICENSE PLATE</string>
    <string name="error_no">Enter the correct license plate</string>
</resources>
