<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@mipmap/bg"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.szfp.ss.LuRuKaActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
    <ScrollView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/sl_result"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_font_15"
                    android:text="@string/card_id"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_card_Id"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_font_12"
                    android:padding="@dimen/materialize_baseline_grid_x2"
                    android:background="@drawable/dragbg"/>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/first_name"
                    android:textSize="@dimen/text_font_15" />

                <TextView
                    android:id="@+id/tv_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/dragbg"
                    android:padding="@dimen/materialize_baseline_grid_x2"
                    android:textSize="@dimen/text_font_12"
                    android:textStyle="" />
            </LinearLayout>
            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_font_15"
                    android:text="@string/last_name"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_last_name"
                    android:textSize="@dimen/text_font_12"
                    android:padding="@dimen/materialize_baseline_grid_x2"
                    android:background="@drawable/dragbg"/>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_font_15"
                    android:text="@string/L_P_N"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_lpn"
                    android:textSize="@dimen/text_font_12"
                    android:padding="@dimen/materialize_baseline_grid_x2"
                    android:background="@drawable/dragbg"/>
            </LinearLayout>


            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_font_15"
                    android:text="@string/T_N"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_tn"
                    android:textSize="@dimen/text_font_12"
                    android:padding="@dimen/materialize_baseline_grid_x2"
                    android:background="@drawable/dragbg"/>
            </LinearLayout>




            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="@dimen/length_100">
                <include
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    layout="@layout/frag_button" />


            </RelativeLayout>





        </LinearLayout>



    </ScrollView>



    <RelativeLayout
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rl_pat_card">
        <WebView
            android:layout_width="207dp"
            android:id="@+id/card_pat_wv"
            android:layout_height="207dp"
            android:layout_marginTop="33dp"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true">
        </WebView>


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/card_pat_str"
            android:textColor="@color/aqua"
            android:textSize="@dimen/text_font_30"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:padding="10dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="36dp" />
    </RelativeLayout>


</LinearLayout>
